src/test/resources/invalid_tests/MissingIO.cnna
architecture MissingIO{
    def input Q(-oo:+oo)^{inputs=10} in
    def input Q(-oo:+oo)^{inputs2=10} in2
    def output Q(0:1)^{classes=2} out
    def output Q(0:1)^{classes2=2} out2

    in ->
    FullyConnected(units=64, no_bias=true) ->
    Tanh() ->
    FullyConnected(units=classes, no_bias=true) ->
    Softmax() ->
    out
}